# CSIRO-nggp-mlai-workshops

./: .gitignore  AGENTS.md  README.md  pyproject.toml
agents/: SELF_REFLECTION.md  SESSION_CONTEXT.md  WORKFLOW_GUIDE.md  WORKFLOW_STATUS.md
notebooks/: 00_learning_from_data.ipynb  01_data_space.ipynb  01_problem_setup.ipynb  02_hypothesis_space.ipynb  02_our_approach.ipynb  03_evaluation.ipynb  03_optimization_space.ipynb  03a_data_space_interventions.ipynb  03b_hypothesis_space_interventions.ipynb  03c_optimizer_space_interventions.ipynb  04_generalisation.ipynb  04_investigation.ipynb  04_synthesis.ipynb  05_experiment_lab.ipynb  05_probabilistic_learning.ipynb  main.ipynb
src/nextgen2026_mlai_workshops/: __init__.py  data.py  data_space.py  hypothesis_space.py  metrics.py  models.py  optimization_space.py  plots.py  solar_pv.py  solution_space.py
tests/: __init__.py  test_data_space_helpers.py  test_hypothesis_space_helpers.py  test_optimization_space_helpers.py  test_solar_pv_helpers.py  test_solution_space_helpers.py
workshops/01_data_and_hypothesis/: 01_data_space.ipynb  02_hypothesis_space.ipynb  03_optimization_space.ipynb  05_solution_space.ipynb
workshops/02_optimization/notebooks/: 02_hypothesis_space.ipynb  03_optimization_space.ipynb  04_mlp_optimization_space.ipynb
workshops/03_solar_pv/: 00_learning_from_data.ipynb  01_problem_setup.ipynb  04_synthesis.ipynb
