[project]
name = "nextgen2026-mlai-workshops"
version = "0.1.0"
description = "Jupyter notebooks and package scaffolding for the NextGen ML/AI Workshops."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENCE" }
dependencies = [
    "matplotlib>=3.9.0",
    "numpy>=2.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
    "notebook>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
